--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "firebase": "^8.2.1",
     "framer-motion": "^2.9.5",
     "next": "10.0.3",
     "react": "17.0.1",
