--- a/package.json
+++ b/package.json
@@ -15,11 +15,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
-    "react-spring": "^8.0.27",
-    "react-three-fiber": "^5.3.12",
-    "sass": "^1.30.0",
-    "styled-components": "^5.2.1",
-    "three": "^0.124.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^7.16.0",
