--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "sweetalert2": "^10.13.0"
   },
   "devDependencies": {
     "eslint": "^7.16.0",
