--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "drei": "^2.2.17",
     "firebase": "^8.2.1",
     "framer-motion": "^2.9.5",
+    "locomotive-scroll": "^4.0.6",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "react-three-fiber": "^5.3.12",
-    "styled-components": "^5.2.1",
-    "three": "^0.124.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^7.16.0",
@@ -30,7 +29,6 @@
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
-    "next-transpile-modules": "^6.0.0",
     "prettier": "^2.2.1"
   },
   "husky": {
