--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "firebase": "^8.2.1",
-    "framer-motion": "^2.9.5",
+    "firebase": "^8.2.6",
+    "framer-motion": "^3.3.0",
     "locomotive-scroll": "^4.0.6",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
-    "react-three-fiber": "^5.3.12",
+    "react-theme-switch": "^0.1.7",
+    "react-three-fiber": "^5.3.18",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
