--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
+    "react-is": "^17.0.1",
     "react-theme-switch": "^0.1.7",
     "react-three-fiber": "^5.3.18",
     "styled-components": "^5.2.1",
