--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@popmotion/popcorn": "^0.4.4",
     "firebase": "^8.2.6",
     "framer-motion": "^3.3.0",
+    "gsap": "^3.6.0",
     "locomotive-scroll": "^4.0.6",
     "next": "^10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-elastic-carousel": "^0.11.1",
     "react-icons": "^4.1.0",
     "react-is": "^17.0.1",
+    "react-scroll": "^1.8.1",
     "react-theme-switch": "^0.1.7",
     "react-three-fiber": "^5.3.18",
     "styled-components": "^5.2.1",
