--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "firebase": "^8.2.6",
     "framer-motion": "^3.3.0",
     "gsap": "^3.6.0",
     "next": "^10.0.6",
     "react": "17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
     "react-elastic-carousel": "^0.11.1",
     "react-icons": "^4.1.0",
